fix overflow problems

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,9 +22,14 @@
     justify-content: center;
     align-items: center;
     font-size: 150%;
-    word-break: normal;
-    // word-wrap: break-word;
-    overflow: auto;
+    word-wrap: normal;
+    text-align: center;
+    // overflow: auto;
+}
+
+#react-div:first-word,
+#react-div:last-word {
+    font-weight: bold;
 }
 
 .latter {
@@ -32,6 +37,8 @@
     justify-content: center;
     align-items: center;
     overflow: auto;
+    word-wrap: normal;
+    text-align: center;
 }
 
 .oldName,
@@ -59,27 +66,28 @@
     align-items: center;
 }
 
+.react-div {
+    padding: 4px;
+    margin: 2px;
+}
+
 // .example-enter {
 //   opacity: 0.01;
 // }
-
 // .example-enter.example-enter-active {
 //   opacity: 1;
 //   transition: opacity .5s ease-in;
 // }
-
 // .example-appear {
 //   opacity: 0.01;
 //   transition: opacity .5s ease-in;
 // }
-
 // .example-appear.example-appear-active {
 //   opacity: 1;
 // }
-
 .changeBox {
-  // background: gray;
-  border-bottom: 1px solid;
-  margin-bottom: 10px;
-  padding: 4px;
+    // background: gray;
+    border-bottom: 1px solid;
+    margin-bottom: 10px;
+    margin-left: 4px;
 }
